--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
 <head>
 <title>Михан имба!</title>
-<link rel="stylesheet" type="text/css" href="style.css">
-
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
