--- a/main_page.html
+++ b/main_page.html
@@ -109,7 +109,7 @@
 <h3>Особые благодарности :3<h3>
 <p>Виктор: beta-тестер🤣</p>
 <p>Рашид: разработчик😎</p>	
-<p></p>	
+<p>Владыка: 3 глава Кластера😉</p>	
 
 </div>
 </div>
