--- a/main_page.html
+++ b/main_page.html
@@ -81,7 +81,7 @@
 
 <section>
 <div class="box">
-<h2 data-jarallax-element="0 -200">Илья📈</h2>
+<h2 data-jarallax-element="0 -200">Илья🤑</h2>
 <div class="container">
    <div class="imgBx jarallax">
     <img src="ilya.jpg" class="jarallax-img">
